fix storage API generation
* unnecessary table alias to query
* missing reference to generated ListRequest in query method